# gsm-sip-bridge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  config.ini.example  config.toml.example  deny.toml  docker-compose.yml  start.sh
.cargo/: mutants.toml
.cursor/rules/: release-notes.mdc  specify-rules.mdc
.github/: release.yml
.github/workflows/: ci.yml  pjsip-base.yml  publish.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  pjsip.Dockerfile  prometheus.yml
docker/grafana/dashboards/: gsm-bridge.json
docker/grafana/provisioning/dashboards/: dashboard.yml  gsm-sip-bridge.json
docs/: configuration.md  migrating-from-v4.1.x.md  operations.md
etc/: 99-ec20-gsm-sip-bridge.rules
gsm-sip-bridge/: Cargo.toml
gsm-sip-bridge/src/: cli.rs  error.rs  lib.rs  main.rs  runtime.rs
gsm-sip-bridge/src/config/: mod.rs  secret.rs
gsm-sip-bridge/src/control/: client.rs  protocol.rs  server.rs
gsm-sip-bridge/src/metrics/: mod.rs  server.rs  web_state.rs
gsm-sip-bridge/src/modules/: at_commander.rs  audio_pipeline.rs  beep.rs  card.rs  discovery.rs  mod.rs
gsm-sip-bridge/src/observability/: logging.rs  mod.rs  modemmanager.rs
gsm-sip-bridge/src/sip/: alsa_media_port.rs  mod.rs
gsm-sip-bridge/src/sms/: discord.rs  mod.rs  reader.rs
gsm-sip-bridge/src/store/: calls.rs  mod.rs  schema.rs  slots.rs  sms.rs
gsm-sip-bridge/tests/: test_at_commander.rs  test_audio_pipeline.rs  test_beep_generator.rs  test_bridge_call.rs  test_card_pool.rs  test_cli.rs  test_config.rs  test_discovery.rs  test_end_to_end.rs  test_logging.rs  test_metric_renames.rs  test_metrics_endpoint.rs  test_migration_guide.rs  test_migration_sql.rs  test_sip_registration.rs  test_sms_discord.rs  test_sms_handler.rs  test_sms_reader.rs  test_store_calls.rs  test_store_concurrent_writers.rs  test_store_restart.rs  test_store_sms.rs
gsm-sip-bridge/tests/common/: mod.rs  pbx.rs  pty.rs
pjsua-safe/: Cargo.toml
pjsua-safe/src/: account.rs  audio_media_port.rs  call.rs  endpoint.rs  error.rs  lib.rs  log_bridge.rs  thread_prio.rs
pjsua-safe/tests/: smoke.rs
pjsua-sys/: Cargo.toml  build.rs
pjsua-sys/src/: lib.rs
specs/001-gsm-audio-echo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gsm-audio-echo/contracts/: cli-interface.md
specs/003-gsm-sip-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-gsm-sip-bridge/checklists/: requirements.md
specs/003-gsm-sip-bridge/contracts/: cli-interface.md
specs/005-observability-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-observability-metrics/checklists/: requirements.md
specs/006-sms-discord-forward/: data-model.md  plan.md  research.md  spec.md
specs/006-sms-discord-forward/checklists/: requirements.md
specs/008-rust-rewrite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rust-rewrite/checklists/: requirements.md
specs/008-rust-rewrite/contracts/: cli.md  config.toml.schema.md  db.schema.sql  discord-webhook.md  metrics.md
specs/009-gsm-resiliency-cli/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-gsm-resiliency-cli/checklists/: requirements.md
specs/009-gsm-resiliency-cli/contracts/: control-protocol.md
src/: at_commander.cpp  at_commander.h  audio_loop.cpp  audio_loop.h  device_discovery.cpp  device_discovery.h  logger.h  main.cpp  ring_buffer.h  serial_port.cpp  serial_port.h
src/bridge/: alsa_media_port.cpp  alsa_media_port.h  beep_generator.cpp  beep_generator.h  bridge_account.cpp  bridge_account.h  bridge_call.cpp  bridge_call.h  bridge_config.cpp  bridge_config.h  call_store.cpp  call_store.h  card_instance.cpp  card_instance.h  card_pool.cpp  card_pool.h  main.cpp  metrics.cpp  metrics.h  sms_handler.cpp  sms_handler.h  sms_store.cpp  sms_store.h
src/sip/: main.cpp  sip_config.cpp  sip_config.h
tests/integration/: pty_pair.h  test_at_commander.cpp  test_audio_loop.cpp  test_beep_generator.cpp  test_bridge_call.cpp  test_bridge_config.cpp  test_call_store.cpp  test_device_discovery.cpp  test_end_to_end.cpp  test_metrics.cpp  test_ring_buffer.cpp  test_serial_port.cpp  test_sms_handler.cpp  test_sms_store.cpp
tools/: count-unsafe.sh
