[package]
name = "gsm-sip-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gsm-sip-bridge"
path = "src/main.rs"

[[bin]]
name = "gsm-echo"
path = "src/bin/gsm_echo.rs"

[[bin]]
name = "sip-echo"
path = "src/bin/sip_echo.rs"

[features]
pjsip-linked = ["pjsua-safe/pjsip-linked"]

[dependencies]
pjsua-safe = { path = "../pjsua-safe" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
prometheus = "0.13"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
rusb = { version = "0.9", features = ["vendored"] }
serialport = "4"
alsa = "0.9"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
